--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,5 +5,4 @@ jobs:
     runs-on: Linux
     steps:
       - name: Run playbook 
-        run: |
-            echo "ansible-playbook -i localhost test/test.yml"
+        run: ansible-playbook -i localhost test/test.yml 
