--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: deploy and configure
 on: [push]
 jobs:
-  Run Playbook test/test.yml:
+  Deploy:
     runs-on: Linux
     steps:
       - name: Run playbook 
